--- a/main/css/main.css
+++ b/main/css/main.css
@@ -1,18 +1,272 @@
-.header{
+.header {
   width: 100%;
 }
 
-.header .slider-item{
+.header .slider-item {
   float: left;
 }
-.header .slider img{
+
+.header .slider img {
   width: 100%;
   height: 100%;
 }
-#img-container{
+
+#img-container {
   position: absolute;
 }
-#slider-container{
+
+#slider-container {
   position: relative;
   overflow: hidden;
+}
+
+.header .slider {
+  position: relative;
+}
+
+.header .btn-prev {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  margin-top: -30px;
+  width: 30px;
+  height: 75px;
+  line-height: 75px;
+  color: #000;
+  text-align: center;
+  background-color: #333;
+  opacity: 0.3;
+  z-index: 1;
+}
+
+.logo a {
+  text-decoration: none;
+  color: #333;
+}
+
+.header .btn-next {
+  position: absolute;
+  top: 50%;
+  margin-top: -30px;
+  width: 30px;
+  height: 75px;
+  line-height: 75px;
+  right: 0px;
+  color: #000;
+  text-align: center;
+  background-color: #333;
+  opacity: 0.3;
+  z-index: 1;
+}
+
+/* logo */
+.logo {
+  box-sizing: border-box;
+  height: 55px;
+  background-color: #f6f6f6;
+}
+
+.logo .left {
+  width: 450px;
+}
+
+.logo .left-logo img {
+  margin-top: 7px;
+  margin-left: 10px;
+}
+
+.logo .left-logo {
+  float: left;
+}
+
+.logo .left .classify ul {
+  margin-left: 10px;
+  float: left;
+}
+
+
+.logo .left .classify ul li {
+  box-sizing: border-box;
+  float: left;
+  width: 70px;
+  height: 55px;
+  text-align: center;
+  line-height: 55px;
+  font-size: 16px;
+  border-right: 1px solid #fff;
+}
+
+.logo .left .classify ul li:hover,
+.logo .right:hover {
+  /* background-color: #e5b9b9;
+  color: #fff; */
+  border-bottom: 3px solid #f00;
+}
+
+.logo .right {
+  box-sizing: border-box;
+  float: right;
+  width: 150px;
+  height: 55px;
+  line-height: 55px;
+  text-align: center;
+}
+
+.main-content {
+  width: 980px;
+  margin: 0 auto;
+}
+
+.skin {
+  padding-top: 10px;
+}
+
+.skin .skin-top {
+  width: 80px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  margin: 0 auto;
+  border-bottom: 3px solid #f00;
+}
+
+.skin .skin-content {
+  margin-top: 10px;
+}
+
+.skin .skin-content a {
+  display: inline-block;
+}
+
+.skin .skin-content .skin-item:nth-child(odd) {
+  box-sizing: border-box;
+  float: left;
+  width: 48%;
+  margin: 0 auto;
+  border: 10px solid #fff;
+}
+
+.skin .skin-content .skin-item:nth-child(even) {
+  box-sizing: border-box;
+  float: right;
+  width: 48%;
+  margin: 0 auto;
+  border: 10px solid #fff;
+
+}
+
+.skin .skin-content .skin-item:hover {
+  border: 10px solid #f8d9d9;
+  background-color: #f8d9d9;
+}
+
+.skin .skin-content .skin-item .skin-img {
+  box-sizing: border-box;
+}
+
+.skin .skin-content .skin-item .skin-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.skin .skin-content .skin-item .skin-desc .left {
+  margin-left: 10px;
+  float: left;
+  color: red;
+
+}
+
+.skin .skin-content .skin-item .skin-desc .left span {
+  font-weight: 700;
+  font-size: 25px;
+}
+
+.skin .skin-content .skin-item .skin-desc .right {
+  margin-right: 10px;
+  float: right;
+  color: red;
+  /* font-size: 16px; */
+}
+
+.contact {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+}
+
+.contact img {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  width: 100%;
+  height: 130px;
+  background-color: #000;
+}
+
+.footer .bottom {
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+  color: #fff;
+  font-size: 12px;
+  padding-top: 100px;
+}
+
+.list {
+  width: 980px;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-bottom:20px;
+  padding-top:20px;
+  background: url('../images/999.jpg') no-repeat center center;
+  background-size:cover;
+}
+
+.list .left,
+.list .mid,
+.list .right {
+  float: left;
+  width: 33%;
+}
+
+.list .hufu-list {
+  width: 250px;
+  margin: 0 auto;
+}
+
+.hufu-list-title {
+  font-size: 20px;
+  color: #fff;
+  width: 100px;
+  text-align: center;
+  margin: 0 auto;
+  border-bottom: 3px solid #f88;
+  padding-bottom: 10px;
+}
+
+.hufu-list-content {
+  width: 200px;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.hufu-list-content ul li {
+  text-align: center;
+}
+
+.hufu-list-content ul li a:hover {
+  color: red;
+}
+
+.hufu-list-content ul li a {
+  text-decoration: none;
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+  margin-top: 10px;
 }
