--- a/main/css/main.css
+++ b/main/css/main.css
@@ -1,9 +1,16 @@
+body{
+  background-image: url('../images/pink_rice.png');
+  background-attachment: fixed;
+}
 .header {
   width: 100%;
 }
 
 .header .slider-item {
   float: left;
+}
+.skin-img{
+  background-color: #fff;
 }
 
 .header .slider img {
@@ -102,6 +109,47 @@
   border-bottom: 3px solid #f00;
 }
 
+.logo .mid {
+  float: left;
+}
+
+.mid .search {
+  float: left;
+}
+
+.mid .search-value {
+  margin-left: 10px;
+  float: left;
+  margin-top: 15px;
+
+}
+
+.mid .search-value input {
+  height: 20px;
+}
+
+.mid .search-button {
+  float: left;
+  height: 25px;
+  background-color: #000;
+  margin-top: 15px;
+  font-size: 16px;
+  color: #fff;
+  line-height: 25px;
+  width: 50px;
+  text-align: center;
+  margin-left: 10px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+.mid .search-button:hover{
+  background-color: #777;
+  cursor: pointer;
+}
+
 .logo .right {
   box-sizing: border-box;
   float: right;
@@ -163,17 +211,23 @@
   border-radius: 4px;
   overflow: hidden;
 }
-
+.skin-desc{
+  height:80px;
+  background-color: #fff;
+}
+.skin-item:hover .skin-desc{
+  background-color: #f8d9d9;
+}
 .skin .skin-content .skin-item .skin-img img {
   width: 100%;
   font-size: 0;
 }
 
 .skin .skin-content .skin-item .skin-desc .left {
-  height:30px;
+  height: 30px;
   overflow: hidden;
   margin-left: 10px;
-  float: left;
+  /* float: left; */
   color: red;
 }
 
@@ -183,11 +237,11 @@
 }
 
 .skin .skin-content .skin-item .skin-desc .right {
-  height:50px;
+  height: 50px;
   overflow: hidden;
   margin-right: 10px;
   font-size: 13px;
-  float: right;
+  /* float:left; */
   line-height: 20px;
   color: #777;
   /* font-size: 16px; */
